# linux-playground

./: .config-buildroot  .config-linux  .config-linux-5.19  .config-linux-6.3  .config-linux-64  .config-linux-mini  .gitignore  build_and_run.sh  build_programs.sh  cgroup_stat_check.c  cgroups_stresser.c  config_cgroup2.sh  create_swap_image.sh  device_table.txt  init.sh  post-build.sh  run.sh  users_table.txt
eboostctl/: Cargo.toml
eboostctl/src/: main.rs
fs_overlay/etc/ssh/: ssh_host_ecdsa_key  ssh_host_ecdsa_key.pub  ssh_host_ed25519_key  ssh_host_ed25519_key.pub  ssh_host_rsa_key  ssh_host_rsa_key.pub
kmallocer/: Cargo.toml
kmallocer-mod/: .gitignore  Makefile  kmallocer.c
kmallocer/kmallocerctl/: Cargo.toml
kmallocer/kmallocerctl/src/: main.rs
kmallocer/mod/: .gitignore  Makefile  kmallocer.c
kmallocer/src/: main.rs
kmallocerctl/src/: main.rs
mallocator/: Cargo.toml
mallocator/src/: main.rs
mfiller/: Cargo.toml
mfiller/src/: main.rs
mstress/: Cargo.toml
mstress/src/: main.rs
nettest/: Cargo.toml
nettest/src/: client.rs  common.rs  server.rs
psipoll/: .gitignore  Cargo.toml  cpsipoll  main.c  psipoll
psipoll/src/: main.rs
