[package]
name = "kmallocer"
version = "0.1.0"
edition = "2021"


[dependencies]
libc = "0.2.40"
byteorder = "1.4.3"
clap = {version = "3.2.22", features = ["derive"] }
rand = "0.8.5"
regex = "1"
lazy_static = "1.4.0"
ctrlc = "3.2.4"

[profile.release]
strip = true  # Automatically strip symbols from the binary.
opt-level = "z"  # Optimize for size.
lto = true
codegen-units = 1
panic = "abort"
